Remove EC form from website, update

--- a/alumni.html
+++ b/alumni.html
@@ -98,7 +98,16 @@
       <div class="row">
           <div class="col-md-12">
               <h1>Oxford University Liberal Democrats ... and our other historical names!</h1>
-              <p>The Oxford University Liberal Democrats changed its name in MT 2024 to the Oxford Students Liberal Association. Predecessor Societies also include the OU Social and Liberal Democrats, Oxford Students Alliance Society, Oxford Students Liberal Society, Oxford Union of Liberal Students and OU Liberal Club. if you've ever been a member of OULD or any of its predecessors, we would be delighted to hear from you as we try to build our alumni networks up!</p>
+              <p>The Oxford University Liberal Democrats changed its name in Michaelmas 2024 to the Oxford Students Liberal Association. Predecessor Societies also include the Oxford University Social and Liberal Democrats, Oxford Students Alliance Society, Oxford Students Liberal Society, Oxford Union of Liberal Students and Oxford University Liberal Club. if you've ever been a member of OULD or any of its predecessors, we would be delighted to hear from you as we try to build our alumni networks up!</p>
+          </div>
+      </div>
+    </section>
+
+    <section class="presidents-welcome container my-7 text-center">
+      <div class="row">
+          <div class="col-md-12">
+              <h1>Alumni?</h1>
+              <p>The President would be thrilled to hear from you! <a href="mailto:president@oxuniliberals.com">Click here to email the President</a></p>
           </div>
       </div>
     </section>
@@ -113,16 +122,8 @@
       </div>
     </section>
 
-    <section class="presidents-welcome container my-7 text-center">
-        <div class="row">
-            <div class="col-md-12">
-                <h1>Join the Emeritus Committee</h1>
-                <p><a href="https://forms.gle/Y2G5wKE45cimDUxg9">Click here for The Emeritus Committee Form</a></p>
-                <p>This form is for ex Senior Officers (President, Vice President, Treasurer and Returning Officer, and other roles of equivalent seniority) of the Society to join the Emeritus Committee, the body that elects the Senior Member and Returning Officer and also handles electoral and disciplinary issues. It is called extremely rarely, and so your commitment would be zero for 99% of the year- but regardless your service would be greatly appreciated. Please do leave your email in the form, and when you're required we will send you an email - but please know that you're under no obligation to answer the call.</p>
-                <h1> ... if you've ever been a member of OULD or any of its predecessors, we would be delighted to hear from you as we try to build our alumni networks up!</h1>
-            </div>
-        </div>
-      </section>
+    
+
     <hr class="container my-5">
     <!-- preloader
     ==================================================
