--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
                     <section id="about">
                         <h2>About OSLA</h2>
                         <p>The Oxford Students Liberal Association (OSLA) is the student branch of the Liberal Democrats for Oxford students. Our purpose is to support, develop, improve and promote the policies and candidates of the Liberal Democrats and liberal values within the City of Oxford and its Universities.</p>
-                        <p>The Oxford University Liberal Democrats changed its name in Michaelmas 2024 to the Oxford Students Liberal Association. Predecessor Societies also include the Oxford University Social and Liberal Democrats, Oxford Students Alliance Society, Oxford Students Liberal Society, Oxford Union of Liberal Students and OU Liberal Club.</p>
+                        <p>The Oxford University Liberal Democrats changed its name in Michaelmas 2024 to the Oxford Students Liberal Association. Predecessor Societies also include the Oxford University Social and Liberal Democrats, Oxford Students Alliance Society, Oxford Students Liberal Society, Oxford Union of Liberal Students and Oxford University Liberal Club.</p>
                     </section>
 
                     <section id="socials">
