Update about page

--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
                     <section id="socials">
                       <h2>Our Events</h2>
                       <p>During Oxford's Term, we have our flagship 'Liquor & Liberalism' (L&L) event with discounted rates on drinks for members and lively debating! We regularly partake in Crewdates with OUCA (Oxford University Conservative Association) and other societies around Oxford ... and many more events including Speaker events. Whether you are Liberal politically or not, you are welcome at OSLA!</p>
-                      <a href="/events.html" class="btn-email">Explore our events</a>
+                      <a href="events.html" class="btn-email">Explore our events</a>
                     </section>
             
                     <section id="history">
@@ -185,7 +185,7 @@
                                 </div>
                                 <div class="timeline-content">
                                     <div class="timeline-card">
-                                        <h3>Oxford University Liberal Democrats</h3>
+                                        <h3>The Oxford University Liberal Democrats</h3>
                                         <p>Merged with the Oxford University Liberal Club and Oxford University Social Democrats to form the the Oxford University Liberal Democrats.</p>
                                         <div class="timeline-icon">
                                             <i class="fas fa-handshake"></i>
@@ -193,14 +193,28 @@
                                     </div>
                                 </div>
                             </div>
-                             <div class="timeline-item left">
+                            <div class="timeline-item left">
+                                <div class="timeline-marker">
+                                    <div class="timeline-year">2022 - 2024</div>
+                                </div>
+                                <div class="timeline-content">
+                                    <div class="timeline-card">
+                                        <h3>Dormancy</h3>
+                                        <p>The society became dormant as key figures on the Committee graduated without successors.</p>
+                                        <div class="timeline-icon">
+                                            <i class="fas fa-moon"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                             <div class="timeline-item right">
                                 <div class="timeline-marker">
                                     <div class="timeline-year">2024 - </div>
                                 </div>
                                 <div class="timeline-content">
                                     <div class="timeline-card">
-                                        <h3>Oxford Students Liberal Association</h3>
-                                         <p>Renaming of organisation to Oxford Students Liberal Association (OSLA) reflecting a broader liberal appeal under the new President, Zagham Farhan. This new website was launched at the same time.</p>
+                                        <h3>The Oxford Students Liberal Association</h3>
+                                         <p>The organisation started anew in Trinity 2024 under the presidency of Zagham Farhan, University College. Its first year back has been hugely successful, with now close to 200 members. The name of the society was changed to the Oxford Students Liberal Association (OSLA) to reflect a wider appeal. This new website was launched at the same time.</p>
                                         <div class="timeline-icon">
                                             <i class="fas fa-flag"></i>
                                         </div>
