Update committee bios

--- a/committee.html
+++ b/committee.html
@@ -173,8 +173,8 @@
                         <h2 class="card-title">The Treasurer Emeritus</h2>
                         <h3 class="card-fullname">Lauren Crabtree</h3>
                         <p class="card-college"><i>Pembroke College</i></p>
-                        <p class="card-text">Senior advisor on financial matters for forthcoming treasurers, and representative for disciplinary procedures.<p>
-                        
+                        <p class="card-text">The Treasurer Emeritus is the person who has most recently left the office of the Treasurer. The Treasurer Emeritus acts as an expert advisor to the President should this be required.<p>
+
                     </div>
                 </div>
             </div>
@@ -201,7 +201,7 @@
                         <h2 class="card-title">The Webmaster</h2>
                         <h3 class="card-fullname">Hayden Williams</h3>
                         <p class="card-college"><i>Oxford Brookes University</i></p>
-                        <p class="card-text">The Webmaster is responsible for all digital infrastructure associated with the Association including this website, blog and email services. All OSLA-related technical queries should be directed through the Webmaster.<p>
+                        <p class="card-text">The Webmaster is responsible for all digital infrastructure associated with the Association including this website, blog and email services. All Association-related technical queries should be directed through the Webmaster.<p>
                         <a href="mailto:hayden@haydenwilliams.dev" class="btn-email">Email: The Webmaster</a>
                     </div>
                 </div>
@@ -215,7 +215,7 @@
                         <h2 class="card-title">The Social Secretary</h2>
                         <h3 class="card-fullname">Jessica Rodrigues</h3>
                         <p class="card-college"><i>Pembroke College</i></p>
-                        <p class="card-text">The Social Secretary facilitates social apparatus procurement for events of alcoholic and non-alcoholic variety in addition to assisting with the successful running of OSLA events.</p>
+                        <p class="card-text">The Social Secretary facilitates social apparatus procurement for events of alcoholic and non-alcoholic variety in addition to assisting with the successful running of Association events.</p>
                     </div>
                 </div>
             </div>
@@ -228,7 +228,7 @@
                         <h2 class="card-title">The Director of Communications</h2>
                         <h3 class="card-fullname">Thomas Dorey</h3>
                         <p class="card-college"><i>Oxford Brookes University</i></p>
-                        <p class="card-text">The Director of Communications manages communications (including social media) and communication strategy for OSLA.</p>
+                        <p class="card-text">The Director of Communications manages communications (including social media) and communication strategy for the Association.</p>
                     </div>
                 </div>
             </div>
@@ -241,7 +241,7 @@
                         <h2 class="card-title">The Publications Editor</h2>
                         <h3 class="card-fullname">Robert Turner</h3>
                         <p class="card-college"><i>The Queen's College</i></p>
-                        <p class="card-text">Also known as "The Blogmaster", the Publications Editor is responsible for the official OSLA blog (blog.oxuniliberals.com) and any other Association publications.</p>
+                        <p class="card-text">Also known as 'the Blogmaster', the Publications Editor is responsible for the official 'Freedom of the Press' blog (blog.oxuniliberals.com) and any other Association publications.</p>
                         <a href="https://oxuniliberals.com/submit-article" class="btn-email">Go to: Article Submission Form</a>
                     </div>
                 </div>
@@ -256,7 +256,7 @@
                         <h2 class="card-title">The Access and Welfare Officer</h2>
                         <h3 class="card-fullname">Louise Guy</h3>
                         <p class="card-college"><i>Christ Church</i></p>
-                        <p class="card-text">The Access and Welfare Officer ensures the accessibility, inclusivity and welfare of OSLA events for members. Please feel free to contact regarding any of the above.</p>
+                        <p class="card-text">The Access and Welfare Officer ensures the accessibility, inclusivity and welfare of Association events for members. Please feel free to contact regarding any of the above.</p>
                         <a href="mailto:accessandwelfare@oxuniliberals.com" class="btn-email">Email: The Access and Welfare Officer</a>
                     </div>
                 </div>
