Update minor descriptions for Committee page

--- a/committee.html
+++ b/committee.html
@@ -98,8 +98,8 @@
                         <h2 class="card-title">Junior President</h2>
                         <h3 class="card-fullname">Theo Cunningham</h3>
                         <p class="card-college"><i>St. John's College</i></p>
-                        <p class="card-text">As President, Theo drives OSLA's mission with energy and commitment, championing liberal values through dynamic events, engaging debates, and welcoming socials. Under his leadership, OSLA continues the mission of OSLA as the hub for liberalism in Oxford.</p>
-                        <a href="mailto:president@oxuniliberals.com" class="btn-email">Email: The President</a>
+                        <p class="card-text">As Junior President, Theo leads the Association with passion and dedication, promoting liberal values through lively social events, thought-provoking speakers, and collaboration with other societies. Under his leadership, OSLA remains Oxford's go-to society for liberal thinking and discussion.</p>
+                        <a href="mailto:president@oxuniliberals.com" class="btn-email">Email: The Junior President</a>
                     </div>
                 </div>
             </div>
@@ -112,8 +112,7 @@
                         <h2 class="card-title">Junior President-Elect</h2>
                         <h3 class="card-fullname">Harry Morgan</h3>
                         <p class="card-college"><i>Pembroke College</i></p>
-                        <p class="card-text">The President-Elect's main responsibility involves preparation for the upcoming term where they will serve as the President.</p>
-                        <!-- <a href="mailto:vicepresident@oxuniliberals.com" class="btn-email">Email: The Vice-President</a> -->
+                        <p class="card-text">The Junior President-Elect's main responsibility involves preparation for the upcoming term where they will serve as the Junior President.</p>
                     </div>
                 </div>
             </div>
@@ -126,7 +125,7 @@
                         <h2 class="card-title">Junior Treasurer</h2>
                         <h3 class="card-fullname">Oliver Davis</h3>
                         <p class="card-college"><i>Pembroke College</i></p>
-                        <p class="card-text">The Treasurer is responsible for the Association's ongoing financial health. The Treasurer works in lock-step with the Executive to ensure all plans can be financed and scrutinises decisions made.</p>
+                        <p class="card-text">The Junior Treasurer is responsible for the Association's ongoing financial health. The Treasurer works in lock-step with the Executive to ensure all plans can be financed and scrutinises decisions made.</p>
                     </div>
                 </div>
             </div>
@@ -139,7 +138,7 @@
                         <h2 class="card-title">Junior Secretary</h2>
                         <h3 class="card-fullname">Ava Doherty</h3>
                         <p class="card-college"><i>Brasenose College</i></p>
-                        <p class="card-text">The Secretary is responsible for secretarial obligations within the Association.</p>
+                        <p class="card-text">The Junior Secretary is primarily responsible for secretarial obligations within the Association.</p>
                     </div>
                 </div>
             </div>
@@ -201,7 +200,7 @@
                         <h2 class="card-title">The Webmaster</h2>
                         <h3 class="card-fullname">Hayden Williams</h3>
                         <p class="card-college"><i>Oxford Brookes University</i></p>
-                        <p class="card-text">The Webmaster is responsible for all digital infrastructure associated with the Association including this website, blog and email services. All Association-related technical queries should be directed through the Webmaster.<p>
+                        <p class="card-text">The Webmaster is responsible for all digital infrastructure associated with the Association including this website, document portal, blog and email services. All Association-related technical queries should be directed through the Webmaster.<p>
                         <a href="mailto:hayden@haydenwilliams.dev" class="btn-email">Email: The Webmaster</a>
                     </div>
                 </div>
