Update mailing list page

--- a/mailing-list.html
+++ b/mailing-list.html
@@ -86,14 +86,14 @@
 <body>
     <!-- home
     ================================================== -->
-     <!-- President's Welcome Section -->
-     <section class="presidents-welcome container my-5">
+     <!-- Mailing List Section -->
+     <section class="mailinglist-section container my-5">
         <div class="row">
             <div class="col-md-8 mx-auto">
-                <h2>Join the OSLA Mailing List (NOT membership)</h2>
-                <p><a href="https://forms.gle/WHWtBEenYXhimuH18">Click here for the OSLA Mailing List Subscription Form (NOT MEMBERSHIP)</a></p>
+                <h2>Join OSLA's Mailing List (non-membership)</h2>
+                <p><a href="https://oxford-university-liberal-association.square.site/">Click here for the OSLA Portal (mailing list form can be found in footer)</a></p>
                 <h3>... are you looking for membership of OSLA instead?</h3>
-                <p><a href="join.html">Click here to access our 'join' page for OSLA</a></p>
+                <p><a href="join.html">Click here to explore OSLA membership information</a></p>
                 
             </div>
         </div>
