--- a/alumni.html
+++ b/alumni.html
@@ -94,7 +94,7 @@
             </div>
         </div>
     </section>
-    <section class="presidents-welcome container my-7 text-center">
+    <section class="alumni-historicalnames-section  container my-7 text-center">
       <div class="row">
           <div class="col-md-12">
               <h1>Oxford University Liberal Democrats ... and our other historical names!</h1>
@@ -103,7 +103,7 @@
       </div>
     </section>
 
-    <section class="presidents-welcome container my-7 text-center">
+    <section class="alumni-reachout-section container my-7 text-center">
       <div class="row">
           <div class="col-md-12">
               <h1>Alumni?</h1>
@@ -112,8 +112,7 @@
       </div>
     </section>
 
-
-    <section class="presidents-welcome container my-7 text-center">
+    <section class="alumni-notables-section container my-7 text-center">
       <div class="row">
           <div class="col-md-12">
               <h1>Notable Alumni</h1>
