--- a/contact.html
+++ b/contact.html
@@ -92,8 +92,8 @@
         <div class="row">
             <div class="col-md-6">
                 <h1>General Enquiries</h1>
-                <p>Email The President at: <a href="mailto:president@oxuniliberals.com">president@oxuniliberals.com</a></p>
-                <p>OR ... The President also regularly reviews Direct Messages on our <a href="https://www.instagram.com/oxuniliberals/">Instagram</a>, so please feel free to reach out there!</p>
+                <p>Email the President at: <a href="mailto:president@oxuniliberals.com">president@oxuniliberals.com</a></p>
+                <p>OR ... the President also regularly reviews Direct Messages on our <a href="https://www.instagram.com/oxuniliberals/">Instagram</a>, so please feel free to reach out there!</p>
                 
                 <h1>Contact the Webmaster</h1>
                 <p>The Webmaster is the officer in charge of this website and all OSLA digital infrastructure. Please report all issues with content (e.g. missing pages) or other related queries. <a href="mailto:hayden@haydenwilliams.dev">Email: The Webmaster</a></p>
