--- a/committee.html
+++ b/committee.html
@@ -122,7 +122,7 @@
             <!-- Treasurer Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/logo.svg" class="card-img-top" alt="The Treasurer" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/treasurer.png" class="card-img-top" alt="The Treasurer" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">Junior Treasurer</h2>
                         <h3 class="card-fullname">Oliver Davis</h3>
