Add governing docs direct link

--- a/join.html
+++ b/join.html
@@ -86,14 +86,23 @@
 <body style="background-image: url('images/events/annual-dinner-2025.jpeg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
     <!-- home
     ================================================== -->
-     <!-- President's Welcome Section -->
-     <section class="presidents-welcome container my-5">
+    <!-- Instagram Info Banner -->
+<div class="alert alert-dismissible fade show text-center py-3" style="background-color: #FAA61A; color: #fff; margin-top: 0; border-radius: 0;">
+    <div class="container">
+        <span style="font-size: 2.2rem; font-weight: 600;">
+            <i class="fab fa-instagram me-3"></i> 
+            All events are posted on ourInstagram!
+            <a href="https://www.instagram.com/oxuniliberals/" class="alert-link text-white" style="text-decoration: underline; margin-left: 10px; font-weight: 700;">@oxuniliberals</a>
+        </span>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close" style="margin-left: 15px;"></button>
+    </div>
+</div>
+
+    <!-- Main Welcome Section -->
+    <section class="presidents-welcome container my-5">
         <div class="row">
             <div class="col-md-8 mx-auto text-center">
                 <h1 style="color: #FAA61A;">Join our ranks!</h1>
-                <h2>All events are posted to OSLA's Instagram!</h2>
-                <a href="https://www.instagram.com/oxuniliberals/" class="fab fa-instagram"> Follow OSLA on Instagram</a>
-                
             </div>
         </div>
         <div class="row">
