Update join page

--- a/join.html
+++ b/join.html
@@ -111,9 +111,9 @@
                 
                 <ol>
                     <li>Check Eligibility</li>
-                    <li><a href="https://oxford-university-liberal-association.square.site" target="_blank" rel="noopener noreferrer">Click here for the Official OSLA Squarespace Membership Portal.</a> Our standard membership rate is £8.00 per 1 x Oxford University Academic Year (Michaelmas, Hilary, Trinity) OR Life Membership at £15.00 </li>
+                    <li><a href="https://oxford-university-liberal-association.square.site" target="_blank" rel="noopener noreferrer">Click here for the Official OSLA Square Membership Portal.</a> Our standard membership rate is £8.00 per 1 x Oxford University Academic Year (Michaelmas, Hilary, Trinity) OR Life Membership at £15.00 </li>
                     <li>Purchase the desired membership tier</li>
-                    <li>You will receive an email from us / SquareSpace on behalf of us confirming your membership</li>
+                    <li>You will receive an email from us / Square on behalf of us confirming your membership</li>
                 </ol>
 
                 <h3>The OSLA Eligibility Criteria</h3>
@@ -125,7 +125,16 @@
                   <span class="badge bg-primary">Adapted from Michaelmas Term 2024 Standing Orders</span>
                 </p>
 
-                <h3>PLEASE READ - NEW MEMBERS</h3>
+                <h3>MEMBERSHIP NOTICES:</h3>
+                <h4>Association Rules and Regulations</h4>
+                <p>Paid members of the Association are reminded that they are bound by the Association's rules and regulations as set out per the latest governing documents.</p>
+
+                <h4>Security Notice</h4>
+                <p>
+
+                </p>
+                
+
                 <p>
                     Official communications from OSLA will come exclusively from '@oxuniliberals.com' email addresses.
 
