Add party membership first year free notice to join page

--- a/join.html
+++ b/join.html
@@ -122,7 +122,7 @@
                   OSLA's Executive reserves the right to admit non-university members on an individual basis through a majority vote of Closed Council.
                   Please feel free to contact us if you have any queries regarding membership - also consider reviewing our Standing Orders for more information.
                   <br>
-                  <span class="badge bg-primary">Adapted from Michaelmas Term 2024 Standing Orders</span>
+                  <span class="badge bg-primary">Adapted from Michaelmas Term 2024 Governing Documents</span>
                 </p>
 
                 <h3>IMPORTANT - NEW MEMBERS</h3>
@@ -140,10 +140,11 @@
                 <p>Liquor & Liberalism is OSLA's regular flagship event. Drinks of all kinds are provided at discounted rates for members! In addition to L&L, we regularly host Speaker events ... some even our Alumni. We frequently collaborate with other political societies in Oxford from everything from Mock PMQs to curry nights!</p>
                 <h3>Are you interested in meeting new people?</h3>
                 <p>OSLA attracts members from all across Oxford reading a variety of degrees from PPE to Computer Science. Meet new people you might not have spoken to otherwise !</p>
-                <h2>The Beating Heart of Liberalism at Oxford</h2>
+                <h2>The beating heart of Liberalism at Oxford</h2>
                 <p>Whether you wish to learn, debate or talk about Liberalism ... or all of the above ... or politics in general ... or campaign for the Liberal Democrats in Oxford, OSLA is the place to be. For enquiries about getting involved, please contact us! </p>
-                <h3>Once OSLA, Always OSLA</h3>
-                <p>The Association keep in regular contact with many Alumni of the Association and many Alumni remain friends throughout life after University ... we have also recently established our new Emeritus Committee to help advise the Committee.</p>
+                <h3>Free party membership for one year</h3>
+                <p>The Association offers reimbursement for the first year of Liberal Democrat party membership fees for Association members. Please reach out to the Treasurer directly or the President's email address for more information.</p>
+                <span class="badge bg-info">Adapted from Trinity Term 2025 Governing Documents</span>
                 
             </div>
         </div>
@@ -152,7 +153,7 @@
     <!-- Membership Noticeboard -->
     <section class="container noticeboard-wrapper">
       <div class="noticeboard-board">
-        <h2 class="noticeboard-title">General Notices for New Members</h2>
+        <h2 class="noticeboard-title">General Notices for Members</h2>
         <div class="notes-grid">
           <div class="note-card">
             <h4>Association Rules and Regulations</h4>
