--- a/index.html
+++ b/index.html
@@ -87,9 +87,24 @@
 </head>
 
 <body>
-    <!-- home
+<!-- Announcement Banner -->
+<div class="announcement-banner">
+<div class="banner-content">
+    <div class="banner-icon">
+        <i class="fas fa-calendar-star"></i>
+    </div>
+    <div class="banner-text">
+        <h1 class="banner-title">NEW Michaelmas Term 2025 Termcard Released!</h1>
+        <p class="banner-subtitle">Discover this term's exciting events, speakers, and socials</p>
+    </div>
+    <a href="termcard.html" class="banner-cta">
+        View Termcard <i class="fas fa-arrow-right"></i>
+    </a>
+</div>
+</div>
+<!-- home
     ================================================== -->
-     <!-- President's Welcome Section -->
+<!-- President's Welcome Section -->
 <section class="presidents-welcome container-fluid py-5">
     <div class="container">
         <div class="row justify-content-center">
