--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
     <div class="banner-icon">
         <i class="fas fa-calendar-star"></i>
     </div>
-    <div class="banner-text">
+    <!-- <div class="banner-text">
         <h1 class="banner-title">NEW Michaelmas Term 2025 Termcard Released!</h1>
         <p class="banner-subtitle">Discover this term's exciting events, speakers, and socials</p>
-    </div>
+    </div> -->
     <a href="termcard.html" class="banner-cta">
         View Termcard <i class="fas fa-arrow-right"></i>
     </a>
