Update copyright notice text contents

--- a/alumni.html
+++ b/alumni.html
@@ -202,7 +202,7 @@
         <!-- Footer Bottom -->
         <div class="footer-bottom">
             <div class="footer-bottom-content">
-                <p>&copy; MMXXV The Oxford Students Liberal Association (OSLA) &mdash; Liberal since 1913</p>
+                <p>Copyright MMXXV ~ The Oxford Students Liberal Association (OSLA) ~ Liberal since 1913</p>
                 <a href="https://www.haydenwilliams.dev/" rel="noopener noreferrer" target="_blank">Website by Hayden Williams</a>
             </div>
         </div>
