--- a/events.html
+++ b/events.html
@@ -114,7 +114,7 @@
             </section>
 
             <!-- Complaints Form Section -->
-            <section class="accessibility-panel my-5" aria-labelledby="complaints-title">
+            <!-- <section class="accessibility-panel my-5" aria-labelledby="complaints-title">
                 <div class="accessibility-container p-4 p-md-5 text-center">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fas fa-file-alt accessibility-icon me-3"></i>
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <div class="notice-container p-3 p-md-4">
                     <div class="d-flex align-items-center mb-3">
